Modify working directory

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 jobs:
   build:
-    working_directory: /tmp
+    working_directory: ~/repo
     docker:
       - image: circleci/golang:1.14.6
         auth:
@@ -29,4 +29,4 @@ jobs:
           name: Docker Release
           command: make docker
       - store_artifacts:
-          path: /tmp/out
+          path: ~/repo/out
