--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
           password: $DOCKERHUB_PASSWORD
     steps:
       - checkout
+      - setup_remote_docker
       - restore_cache:
           keys:
             - go-mod-v4-{{ checksum "go.sum" }}
