--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,11 +5,6 @@ jobs:
       image: ubuntu-1604:201903-01
       docker_layer_caching: true
     working_directory: ~/repo
-    docker:
-      - image: circleci/golang:1.14.6
-        auth:
-          username: $DOCKERHUB_USERNAME
-          password: $DOCKERHUB_PASSWORD
     steps:
       - checkout
       - setup_remote_docker
@@ -31,6 +26,8 @@ jobs:
           command: make build
       - run:
           name: Docker Release
-          command: make docker
+          command: |
+            docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
+            make docker
       - store_artifacts:
           path: ~/repo/out
