Modify auth for docker hub

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
       - run:
           name: Docker Release
           command: |
-            docker login -u $DOCKER_USERNAME --p $DOCKERHUB_PASSWORD
+            docker login -u $DOCKER_USERNAME -p $DOCKERHUB_PASSWORD
             make docker
       - store_artifacts:
           path: ~/repo/out
