--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,9 @@ jobs:
   build:
     docker:
       - image: circleci/golang:1.14
+        auth:
+          username: $DOCKERHUB_USERNAME
+          password: $DOCKERHUB_PASSWORD
     working_directory: ~/repo
     steps:
       - checkout
@@ -32,7 +35,6 @@ jobs:
       - run:
           name: Docker Release
           command: |
-            docker login -u $DOCKER_USERNAME -p $DOCKERHUB_PASSWORD
             make docker
       - store_artifacts:
           path: ~/repo/out
