--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   server:
     build: ./
     ports:
-      - "8000:${APP_PORT}"
+      - "8000:${PORT}"
     environment:
       - ENV="production"
     command: /main
