Fix environment variable

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,11 +20,11 @@ jobs:
       - run:
           name: Build and push Docker image to Heroku
           command: |
-            export HEROKU_API_KEY=$(HEROKU_API_KEY)
+            export HEROKU_API_KEY=$HEROKU_API_KEY
             sudo curl https://cli-assets.heroku.com/install.sh | sh
             heroku container:login
-            heroku container:push -a $(HEROKU_APP_NAME) web
-            heroku container:release -a $(HEROKU_APP_NAME) web
+            heroku container:push -a $HEROKU_APP_NAME web
+            heroku container:release -a $HEROKU_APP_NAME web
   build:
     docker:
       - image: circleci/golang:1.14
